overlap during login solved

--- a/forum/static/forum/css/login.css
+++ b/forum/static/forum/css/login.css
@@ -38,7 +38,7 @@ form .txt_field{
 .txt_field input{
     width: 100%;
     padding: 0 5px;
-    height: 40px;
+    height: 53px;
     font-size: 16px;
     border: none;
     background: none;
